welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value lookingfor
	if (nums(i)==lookingfor){
                     ^