welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
for (i<-0 to nums.length-1) {
	if (nums(i)==lookingfor){
		return i
	}
}
return -1
}
